Complete restructure of project and started off on views

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-Babel
-Django
-django-treebeard
-djangorestframework
-pytz
+appdirs==1.4.2
+Babel==2.3.4
+Django==1.10.6
+django-treebeard==4.1.0
+djangorestframework==3.5.4
+gunicorn==19.6.0
+packaging==16.8
+psycopg2==2.7
+pyparsing==2.1.10
+pytz==2016.10
+six==1.10.0
